Include import statements in code fragments for better context (#2435)
- Introduced `ImportInfo` record to replace raw import strings, capturing `rawSnippet`, `isWildcard`, `identifier`, and `alias` for structured import analysis.
- Added `ImportAnalysisProvider.relevantImportsFor(CodeUnit)` to filter imports to only those actually used by a specific code unit. NB: Only supports methods and classes, similar to source code limits.
- Added `ImportAnalysisProvider.importInfoOf(ProjectFile)` to expose structured import metadata for files.
- Updated `ContextFragments` to prepend only relevant imports (via `relevantImportsFor`) inside an `<imports>` tag before code bodies, reducing context noise for LLMs.
- Implemented `extractTypeIdentifiers` in each language analyzer to identify type references in source code for import filtering.
- Java and Go analyzers use precise Tree-Sitter queries targeting `type_identifier` nodes for high precision.
- Python analyzer uses a broad `(identifier) @id` Tree-Sitter query for high recall, relying on downstream import filtering to handle false positives.
- C++, JavaScript, and TypeScript analyzers use broader identifier queries balanced for their respective language semantics.
- Refactored `JsLikeModuleResolver.relevantImportsForJsLike` to use generic bounds (`<T extends IAnalyzer & ImportAnalysisProvider>`) making the `ImportAnalysisProvider` dependency explicit.
- Updated `GoAnalyzer` to split grouped imports into individual `ImportInfo` entries for per-import filtering.
- Added ordering comment in `python.scm` explaining that specific import patterns must precede fallback patterns to avoid bypassing structured captures.
- Added comprehensive unit tests (`PythonImportTest`, `JavaScriptImportTest`, `TypeScriptImportTest`, `CodeFragmentTest`) to verify import resolution and filtering behavior.
- Updated `TestAnalyzer` utility to support mocking import statements and import info.